--- a/A2Z-NODE/MVC/INVENTORY-MGMT/src/views/layout.ejs
+++ b/A2Z-NODE/MVC/INVENTORY-MGMT/src/views/layout.ejs
@@ -79,6 +79,12 @@
                     <li class="nav-item">
                         <a class="nav-link active" href="/add-product">➕ New Product</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="/registration">Register</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="/login">Login</a>
+                    </li>
                 </ul>
             </div>
         </div>
