--- a/A2Z-NODE/MVC/INVENTORY-MGMT/src/views/layout.ejs
+++ b/A2Z-NODE/MVC/INVENTORY-MGMT/src/views/layout.ejs
@@ -81,7 +81,7 @@
                         <a class="nav-link active" href="/add-product">➕ New Product</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/registration">Register</a>
+                        <a class="nav-link active" href="/register">Register</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="/login">Login</a>
