--- a/A2Z-NODE/MVC/INVENTORY-MGMT/src/views/login.ejs
+++ b/A2Z-NODE/MVC/INVENTORY-MGMT/src/views/login.ejs
@@ -1,7 +1,7 @@
 <div class="d-flex justify-content-center align-items-center vh-100 bg-light">
   <div class="card shadow-lg p-4 rounded-4" style="max-width: 400px; width: 100%;">
     <h3 class="text-center mb-4">Login</h3>
-    <form action="/registration" method="post">
+    <form action="/login" method="post">
 
       <!-- Email -->
       <div class="mb-3">
