--- a/A2Z-NODE/MVC/INVENTORY-MGMT/src/views/register.ejs
+++ b/A2Z-NODE/MVC/INVENTORY-MGMT/src/views/register.ejs
@@ -1,7 +1,7 @@
 <div class="container d-flex justify-content-center align-items-center vh-100">
   <div class="card  p-4 rounded-4 w-100" style="max-width: 800px;">
     <h3 class="text-center mb-4">Registration Form</h3>
-    <form action="/registration" method="post">
+    <form action="/register" method="post">
       <!-- Full Name -->
       <div class="mb-3">
         <label for="name" class="form-label">Full Name</label>
