--- a/A2Z-NODE/MVC/INVENTORY-MGMT/src/views/layout.ejs
+++ b/A2Z-NODE/MVC/INVENTORY-MGMT/src/views/layout.ejs
@@ -80,12 +80,20 @@
                     <li class="nav-item">
                         <a class="nav-link active" href="/add-product">➕ New Product</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="/register">Register</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="/login">Login</a>
-                    </li>
+                    <% if (locals.userEmail) { %>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="/logout">Logout</a>
+                        </li>
+                        <% } else { %>
+                            <li class="nav-item">
+                                <a class="nav-link active" href="/register">Register</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" href="/login">Login</a>
+                            </li>
+                            <% } %>
+
+
                 </ul>
             </div>
         </div>
