finished the mvc application with fundamentals implementation

--- a/A2Z-NODE/MVC/INVENTORY-MGMT/src/views/login.ejs
+++ b/A2Z-NODE/MVC/INVENTORY-MGMT/src/views/login.ejs
@@ -6,7 +6,7 @@
       <!-- Email -->
       <div class="mb-3">
         <label for="email" class="form-label fw-semibold">Email address</label>
-        <input type="email" class="form-control" id="email" name="email" placeholder="example@email.com" required>
+        <input type="email" class="form-control" id="email" name="email" placeholder="example@email.com" autocomplete="email">
       </div>
 
       <!-- Password -->
