--- a/A2Z-NODE/MVC/INVENTORY-MGMT/src/views/register.ejs
+++ b/A2Z-NODE/MVC/INVENTORY-MGMT/src/views/register.ejs
@@ -5,13 +5,13 @@
       <!-- Full Name -->
       <div class="mb-3">
         <label for="name" class="form-label">Full Name</label>
-        <input type="text" class="form-control" id="name" name="name" placeholder="Enter your name" required>
+        <input type="text" class="form-control" id="name" name="name" placeholder="Enter your name" autocomplete="name" required>
       </div>
 
       <!-- Email -->
       <div class="mb-3">
         <label for="email" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="email" name="email" placeholder="example@email.com" required>
+        <input type="email" class="form-control" id="email" name="email" placeholder="example@email.com" autocomplete="email">
       </div>
 
       <!-- Password -->
